Sun Dec 13 20:50:06 1998  George Lebl  <jirka@5z.com>

	* gnome-client.c: fix typo interaction_key -> interaction_keys

1998-12-13  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-init.c 	(gnome_init_cb): Change of strategy.  Pixmaps are
	not cached, but images are.

Mon Dec 14  Felix Bellaby  <felix@pooh.u-net.com>

	* gnome-client.c (gnome_dlient_get_config_prefix): change the prefix
	after each Save Yourself to avoid cuorrupting past saves.
	* gnome-client.h: extra docs for obscure bits of the protocol.

1998-12-14  Ettore Perazzoli  <ettore@comm2000.it>

	* gnome-app.c: Removed some `#if 0'ed stuff.
	(DEFAULT_TOOLBAR_NAME, DEFAULT_MENUBAR_NAME): New string
 	constants.
	(gnome_app_set_menus): Give the menubar the `DEFAULT_MENUBAR_NAME'.
	(gnome_app_set_toolbar): Give the toolbar the
	`DEFAULT_TOOLBAR_NAME'.  If not using toolbar reliefs, set the
	dock item's border width to 1.

	* dock_demo.c: Demonstrate usage of GnomeDockLayout by saving the
	dock configuration on exit, and reloading it a startup.

	* gnome-dock.h: Changed order of the `GnomeDockPositionType' so
	that numbering goes clockwise.

	* gnome-dock.c (drag_new): Return value made gboolean: return TRUE
 	iff successfull.
	(drag_to): Likewise.
	(drag_floating): Likewise.
	(drag_check): Return a value according to what the `drag_*'
 	functions returned.
        (gnome_dock_get_item_by_name): New function.
	(get_docked_item_by_name): New helper function.
	(get_floating_item_by_name): New helper function.
 	(gnome_dock_get_layout): New function to get the layout.
	(layout_add_floating, layout_add_bands): New private helper
 	functions.
	(gnome_dock_add_item): When creating the new band, orient it
 	appropriately.

	* gnome-dock-layout.c, gnome-dock-layout.h: New files to handle
	the docking layout.

	* gnome-dock-item.c: Removed unused `GHOST_HEIGHT' and
 	`CHILDLESS_SIZE' constants.
	(gnome_dock_item_init): Set the container's border width to 1.